import com.oikoaudio.gradle.BundledDocumentationRenderer

allprojects {
    group = 'com.oikoaudio'
    repositories {
        maven {
            url = 'https://maven.bitwig.com/'
        }
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(21)
    }

    dependencies {
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.13.4'
    }

    test {
        useJUnitPlatform()
        jvmArgs += [
                '--add-opens=java.base/java.util.function=ALL-UNNAMED'
        ]
    }
}

tasks.register('generateBundledDocumentation') {
    def sourceFile = layout.projectDirectory.file('docs/user-guide.md')
    def rendererSource = layout.projectDirectory.file(
            'buildSrc/src/main/groovy/com/oikoaudio/gradle/BundledDocumentationRenderer.groovy')
    def templateFile = layout.projectDirectory.file('buildSrc/src/main/resources/bundled-documentation-template.html')
    def akaiFireOutput = project(':modules:akai-fire').layout.projectDirectory.file('src/main/resources/Documentation/index.html')
    def launchControlOutput = project(':modules:launchcontrol').layout.projectDirectory.file('src/main/resources/Documentation/index.html')
    def oikontrolOutput = project(':modules:oikontrol').layout.projectDirectory.file('src/main/resources/Documentation/index.html')
    inputs.files(sourceFile, rendererSource, templateFile)
    outputs.files(akaiFireOutput, launchControlOutput, oikontrolOutput)

    doLast {
        def rendered = BundledDocumentationRenderer.renderUserGuideDocument(sourceFile.asFile.getText('UTF-8'))
        [akaiFireOutput, launchControlOutput, oikontrolOutput].each {
            def outputFile = it.asFile
            outputFile.parentFile.mkdirs()
            outputFile.text = rendered
        }
    }
}

configure([project(':modules:akai-fire'), project(':modules:launchcontrol'), project(':modules:oikontrol')]) {
    tasks.named('processResources') {
        dependsOn(rootProject.tasks.named('generateBundledDocumentation'))
    }
}
